--- a/public/assets/plugins/video-js/video-js.css
+++ b/public/assets/plugins/video-js/video-js.css
@@ -446,8 +446,8 @@ Positioning of the play button in the center or other corners can be done more
 easily in the skin designer. http://designer.videojs.com/
 */
 .vjs-default-skin .vjs-big-play-button {
-  left: 0.5em;
-  top: 0.5em;
+  left: calc(50% - 2em);
+  top: calc(50% - 1.3em);
   font-size: 3em;
   display: block;
   z-index: 2;
