--- a/public/css/customGlobal.css
+++ b/public/css/customGlobal.css
@@ -1,5 +1,5 @@
 .m-brand .m-brand__logo .m-brand__logo-wrapper img {
-    height: 45px!important;
+    max-height: 45px;
     width: auto!important;
 }
 .modal.m-custom-modal {
@@ -218,6 +218,32 @@
 }
 a.text-hover-decoration:hover {
     text-decoration: none;
+}
+.tree-image-container {
+    position: relative;
+    display: inline-block;
+    border-radius: 3px;
+    overflow: hidden;
+    border: 3px solid #666;
+    box-shadow: 0 7px 10px 1px rgba(143,158,181,.14), 0 3px 14px 2px rgba(0,0,0,.12), 0 5px 5px -3px rgba(143,158,181,.2);
+}
+.tree-img-edit-btn {
+    position: absolute;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    top: 10px;
+    right: 10px;
+    background-color: #666;
+    color: #fff;
+    border-radius: 50%;
+    padding-top: 5px;
+    padding-left: 7px;
+}
+.tree-img-edit-btn:hover {
+    text-decoration: none;
+    background-color: #fff;
+    color: #666;
 }
 @media(max-width: 767px) {
     .m-dropdown__wrapper.m-masked-dropdown {
