--- a/public/css/customGlobal.css
+++ b/public/css/customGlobal.css
@@ -226,6 +226,7 @@ a.text-hover-decoration:hover {
     overflow: hidden;
     border: 3px solid #666;
     box-shadow: 0 7px 10px 1px rgba(143,158,181,.14), 0 3px 14px 2px rgba(0,0,0,.12), 0 5px 5px -3px rgba(143,158,181,.2);
+    width: 100%;
 }
 .tree-img-edit-btn {
     position: absolute;
